<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.6">
  <DUT Name="ST_SelectStructData" Id="{01223c51-ed54-4122-86dd-9bfaef37d05d}">
    <Declaration><![CDATA[TYPE ST_SelectStructData :
STRUCT
	datetime: STRING(255);
	trailer_id_lead: LINT;
	trailer_id_rear: LINT;
	latitude: REAL;
	longitude: REAL;
	speed: REAL;
	overspeed: LINT;
	payload_lead: REAL;
	payload_rear: REAL;
	overload_lead: LINT;
	overload_rear: LINT;
	pressure_lead: REAL;
	pressure_rear: REAL;
	overpressure_lead: LINT;
	overpressure_rear: LINT;
	event_code: LINT;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>