<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.6">
  <POU Name="Read_Pressure" Id="{4da627ee-194f-436f-bf88-e2e5c518b461}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM Read_Pressure
VAR
	Pressure_Val	: REAL := 0;
	Pressure_Cyl	: REAL := 0;
	
	Hyd_Efficiency	: REAL := 0;
	nBit_Val AT %I*	: UINT;
	nBit_Cyl AT %I*	: UINT;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[(* convert to pressure *)
Pressure_Val := (nBit_Val/32767)*160;
Pressure_Cyl := (nBit_Cyl/32767)*160;

(* calculate hyd efficiency *)
//rHyd_Efficiency := Read_Pressure.Pressure_Cyl / Read_Pressure.Pressure_Val;]]></ST>
    </Implementation>
    <LineIds Name="Read_Pressure">
      <LineId Id="27" Count="0" />
      <LineId Id="29" Count="1" />
      <LineId Id="28" Count="0" />
      <LineId Id="16" Count="1" />
    </LineIds>
  </POU>
</TcPlcObject>